--- a/css/index/main.css
+++ b/css/index/main.css
@@ -1,7 +1,7 @@
 main {
     display: flex;
     flex: column;
-    height: 95vh;
+    height: 94vh;
 
     align-items: center;
     justify-content: center;
