--- a/css/menukort/menu.css
+++ b/css/menukort/menu.css
@@ -1,4 +1,6 @@
 .menukort{
+    background-color: rgba(0, 0, 0, 0);
+
     display: flex;
     flex-direction: row;
 
@@ -6,15 +8,21 @@
     justify-content: center;
 }
 .menukort img{
-    margin: 10px;
+    margin: 100px;
+    transform: scale(1.2);
+
+    border-radius: 10px;
 }
 
 @media (max-width: 426px){
     .menukort img{
         width: 90vw;
+        transform: scale(1);
+        margin: 10px;
     }
     .menukort{
-        margin-top: 50vh;
+        margin-top: 60vh;
         flex-direction: column;
+        z-index: 1;
     }
 }
